[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chill-coffee-cashier"
version = "0.1.0"
authors = [
    {name = "quozaru", email = "zHIjsBlKlHF7oCZ@proton.me"},
]
description = "Кассовая система для кофейни Chill Coffee"
readme = "README.md"
license = {text = "MIT"}
keywords = ["coffee", "pos", "cashier", "qt", "pyside6", "restaurant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/quozaru/chill-coffee-cashier"
Repository = "https://github.com/quozaru/chill-coffee-cashier"
Issues = "https://github.com/quozaru/chill-coffee-cashier/issues"

[project.scripts]
chill-coffee = "chillcoffee.__main__:main"